# pathtracer-sycl

./: AABB.cpp  AABB.h  CMakeCache.txt  CMakeLists.txt  Camera.cpp  Camera.h  Diffuse.cpp  Diffuse.h  Emissive.cpp  Emissive.h  Makefile  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Random.cpp  Random.h  Ray.cpp  Ray.h  Sphere.cpp  Sphere.h  Trace.h  Triangle.cpp  Triangle.h  cmake_install.cmake  computecpp.conf  jsonserializer.cpp  jsonserializer.h  kdTreeMesh.h  main.cpp  mainGUI.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  o.out  pathtracer-sycl  pathtracer-sycl.cbp  pathtracer-sycl_Sphere.cpp.bc  pathtracer-sycl_main.cpp.bc  pathtracer-sycl_main.cpp.sycl  (+3 more)
cmake/Modules/: FindIntelSYCL.cmake  ccl
pathtracer-sycl_autogen/: moc_predefs.h
